<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfile_constraintLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.CurrentUserProfileFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_scrollUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-15dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/button_back_to_post"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_up" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/profile_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/fragmentProfile_materialCardView_mainCardProfile"
                android:layout_width="350dp"
                android:layout_height="280dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/fragmentProfile_cardView_propic"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginTop="15dp"
                        app:cardCornerRadius="100dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/fragmentProfile_imageView_profileImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:importantForAccessibility="no"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/user_filled"
                                tools:ignore="ImageContrastCheck" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/fragmentProfile_imageButton_editProfile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:importantForAccessibility="no"
                        android:src="@drawable/pencil_edit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/fragmentProfile_textView_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="textFilter|textNoSuggestions"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/fragmentProfile_cardView_propic"
                        app:layout_constraintStart_toStartOf="@+id/fragmentProfile_cardView_propic"
                        app:layout_constraintTop_toBottomOf="@+id/fragmentProfile_cardView_propic"
                        tools:ignore="Deprecated,LabelFor" />

                    <EditText
                        android:id="@+id/fragmentProfile_textView_surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/surname"
                        android:importantForAutofill="no"
                        android:inputType="textFilter|textNoSuggestions"
                        android:paddingStart="16dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="6dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/fragmentProfile_textView_name"
                        app:layout_constraintStart_toStartOf="@+id/fragmentProfile_textView_name"
                        app:layout_constraintTop_toBottomOf="@+id/fragmentProfile_textView_name"
                        tools:ignore="Deprecated,LabelFor,TextContrastCheck" />

                    <ImageButton
                        android:id="@+id/fragmentProfile_imageButton_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/logout_button"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:src="@drawable/logout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profileDoubleItem_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="@+id/fragmentProfile_materialCardView_mainCardProfile"
                app:layout_constraintStart_toStartOf="@+id/fragmentProfile_materialCardView_mainCardProfile"
                app:layout_constraintTop_toBottomOf="@+id/fragmentProfile_materialCardView_mainCardProfile" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileDoubleItem_recyclerView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>