...
    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/currentUserProfileFragment"
        android:enabled="true"
        android:icon="@drawable/user_unfilled"
        android:title="@string/profile" />
</menu>
