<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_theme_light_primary"
    tools:context=".ui.auth.signin.SigninFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <FrameLayout
            android:id="@+id/fragmentSignin_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/fragmentSignin_cardView"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="-20dp"
            app:layout_constraintBottom_toTopOf="@+id/fragmentSignin_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:alpha="0.4"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_banner_foreground" />

            <ImageView
                android:layout_width="320dp"
                android:layout_height="297dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_foreground" />


        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentSignin_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-25dp"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/seed"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:alpha="0.9"
                    android:text="@string/signin_with_your_information"
                    android:textColor="@color/md_theme_light_onSecondaryContainer"
                    android:textSize="11sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:alpha="0.7"
                    android:text="@string/email_address"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignin_textView_emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignin_EditText_emailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:alpha="0.7"
                    android:text="@string/password"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignin_textView_passwordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="11sp"
                    android:textStyle="bold" />
                
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignin_EditText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragmentSignin_button_forgottenPassword"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/forgotten_password"
                        android:textAllCaps="false"
                        android:textColor="@color/md_theme_light_onSecondaryContainer"
                        android:textSize="11sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/fragmentSignin_button_signin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    app:cornerRadius="32dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="12dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="6dp"
                        android:alpha="0.7"
                        android:text="@string/not_signUp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.292"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragmentSignin_button_signup"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="84dp"
                        android:layout_toEndOf="@+id/textView"
                        android:text="@string/signup"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>